Adding nav to tools dashboard build website_release

--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -19,3 +19,15 @@ iframe {
   height: 1600px;
   margin-bottom: -1200px;
 }
+
+#tools-wrapper body {
+	text-align: center;
+}
+
+#tools-wrapper table {
+	margin-bottom: 50px;
+}
+
+#tools-wrapper a {
+	text-decoration:none;
+}
