Adding "Sponsors" to tools page (#8)
* Reorganizing tools and fixing formatting

* Adding sponsor info

* Removing coverage

* Reorganizing sections

* Improving logos

* build:website_release

* Rebuild website on every commit to master

* Improving tools

--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -20,14 +20,14 @@ iframe {
   margin-bottom: -1200px;
 }
 
-#tools-wrapper body {
-	text-align: center;
-}
-
-#tools-wrapper table {
-	margin-bottom: 50px;
-}
-
 #tools-wrapper a {
 	text-decoration:none;
+}
+
+#tools-wrapper .sponsor-logo {
+  max-height: 20px;
+}
+
+#tools-wrapper .empty-cell {
+  text-align: center;
 }
